# ppii

./: .gitignore  CONVENTIONS.md  README.md
api/: CMakeLists.txt  api.c  db_test.c  demo_router.c  djikstra.c  tcp.c  udp.c
api/lib/: easy_dpi.c  easy_dpi.h  easy_socket.c  easy_socket.h  http_parser.c  http_parser.h  http_router.c  http_router.h  http_status.c  http_status.h  ret.c  ret.h
db/: .gitignore  database_documentation.html  database_documentation.md  requetes.sql  tables.sql
db/scripts/: .gitignore  insert_db.py  parse_dats.py  parsers.py  persistance.py  test_codes.py  utils.py
documents/report/: database_normalization.docx  report.tex  state_of_the_art_shortest_path.docx
resources/: er_nary_study.xlsx  template.py  to_discard.json  to_keep.json
resources/json_persistance/: to_discard.json  to_keep.json  unique_choice.json
src/db/: tables.sql
src/db/scripts/: parse_dats.py  parsers.py
